# youtube-to-text

./: .gitignore  Dockerfile  README.md  app.py  clean_podcast.py  pyproject.toml
static/: style.css
templates/: index.html
